--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -8,7 +8,10 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
-      - run: node index.js
+      - name: npm install
+        run: npm install
+      - name: node run
+        run: node index.js
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
