--- a/FM 3883/manifest.json
+++ b/FM 3883/manifest.json
@@ -1,6 +1,6 @@
 {
     "@context": "http://iiif.io/api/presentation/3/context.json",
-    "id": "https://miniatures.fitz.ms/iiif/FM 3883/manifest.json",
+    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3883/manifest.json",
     "type": "Manifest",
     "label": {
         "en": [
@@ -25,17 +25,17 @@
     "rights": "http://creativecommons.org/licenses/by-nc-nd/4.0/",
     "items": [
         {
-            "id": "https://miniatures.fitz.ms/iiif/FM 3883/canvas/0",
+            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3883/canvas/0",
             "type": "Canvas",
             "height": 5506,
             "width": 4531,
             "items": [
                 {
-                    "id": "https://miniatures.fitz.ms/iiif/FM 3883/page/0/0",
+                    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3883/page/0/0",
                     "type": "AnnotationPage",
                     "items": [
                         {
-                            "id": "https://miniatures.fitz.ms/iiif/FM 3883/painting/0",
+                            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3883/painting/0",
                             "type": "Annotation",
                             "motivation": "painting",
                             "body": {
@@ -119,7 +119,7 @@
                                     }
                                 ]
                             },
-                            "target": "https://miniatures.fitz.ms/iiif/FM 3883/canvas/0"
+                            "target": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3883/canvas/0"
                         }
                     ]
                 }
@@ -132,11 +132,11 @@
             },
             "annotations": [
                 {
-                    "id": "https://miniatures.fitz.ms/iiif/FM 3883/page/0/0",
+                    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3883/page/0/0",
                     "type": "AnnotationPage",
                     "items": [
                         {
-                            "id": "https://miniatures.fitz.ms/iiif/FM 3883/annotation/tag/123",
+                            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3883/annotation/tag/123",
                             "type": "Annotation",
                             "motivation": "commenting",
                             "body": {
@@ -145,10 +145,10 @@
                                 "language": "en",
                                 "format": "text/html"
                             },
-                            "target": "https://miniatures.fitz.ms/iiif/FM 3883/canvas/0#xywh=1920,2781,1693,1331"
+                            "target": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3883/canvas/0#xywh=1920,2781,1693,1331"
                         },
                         {
-                            "id": "https://miniatures.fitz.ms/iiif/FM 3883/annotation/tag/128",
+                            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3883/annotation/tag/128",
                             "type": "Annotation",
                             "motivation": "commenting",
                             "body": {
@@ -157,10 +157,10 @@
                                 "language": "en",
                                 "format": "text/html"
                             },
-                            "target": "https://miniatures.fitz.ms/iiif/FM 3883/canvas/0#xywh=1863,3987,1546,1342"
+                            "target": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3883/canvas/0#xywh=1863,3987,1546,1342"
                         },
                         {
-                            "id": "https://miniatures.fitz.ms/iiif/FM 3883/annotation/tag/138",
+                            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3883/annotation/tag/138",
                             "type": "Annotation",
                             "motivation": "commenting",
                             "body": {
@@ -169,10 +169,10 @@
                                 "language": "en",
                                 "format": "text/html"
                             },
-                            "target": "https://miniatures.fitz.ms/iiif/FM 3883/canvas/0#xywh=1348,2056,385,289"
+                            "target": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3883/canvas/0#xywh=1348,2056,385,289"
                         },
                         {
-                            "id": "https://miniatures.fitz.ms/iiif/FM 3883/annotation/tag/145",
+                            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3883/annotation/tag/145",
                             "type": "Annotation",
                             "motivation": "commenting",
                             "body": {
@@ -181,7 +181,7 @@
                                 "language": "en",
                                 "format": "text/html"
                             },
-                            "target": "https://miniatures.fitz.ms/iiif/FM 3883/canvas/0#xywh=1008,45,1269,748"
+                            "target": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3883/canvas/0#xywh=1008,45,1269,748"
                         }
                     ]
                 }
