--- a/FM 3902/manifest.json
+++ b/FM 3902/manifest.json
@@ -1,6 +1,6 @@
 {
     "@context": "http://iiif.io/api/presentation/3/context.json",
-    "id": "https://miniatures.fitz.ms/iiif/FM 3902/manifest.json",
+    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3902/manifest.json",
     "type": "Manifest",
     "label": {
         "en": [
@@ -27,17 +27,17 @@
     "rights": "http://creativecommons.org/licenses/by-nc-nd/4.0/",
     "items": [
         {
-            "id": "https://miniatures.fitz.ms/iiif/FM 3902/canvas/0",
+            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3902/canvas/0",
             "type": "Canvas",
             "height": 5254,
             "width": 5273,
             "items": [
                 {
-                    "id": "https://miniatures.fitz.ms/iiif/FM 3902/page/0/0",
+                    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3902/page/0/0",
                     "type": "AnnotationPage",
                     "items": [
                         {
-                            "id": "https://miniatures.fitz.ms/iiif/FM 3902/painting/0",
+                            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3902/painting/0",
                             "type": "Annotation",
                             "motivation": "painting",
                             "body": {
@@ -121,7 +121,7 @@
                                     }
                                 ]
                             },
-                            "target": "https://miniatures.fitz.ms/iiif/FM 3902/canvas/0"
+                            "target": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3902/canvas/0"
                         }
                     ]
                 }
@@ -134,11 +134,11 @@
             },
             "annotations": [
                 {
-                    "id": "https://miniatures.fitz.ms/iiif/FM 3902/page/0/0",
+                    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3902/page/0/0",
                     "type": "AnnotationPage",
                     "items": [
                         {
-                            "id": "https://miniatures.fitz.ms/iiif/FM 3902/annotation/tag/151",
+                            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3902/annotation/tag/151",
                             "type": "Annotation",
                             "motivation": "commenting",
                             "body": {
@@ -147,10 +147,10 @@
                                 "language": "en",
                                 "format": "text/html"
                             },
-                            "target": "https://miniatures.fitz.ms/iiif/FM 3902/canvas/0#xywh=2439,1121,270,204"
+                            "target": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3902/canvas/0#xywh=2439,1121,270,204"
                         },
                         {
-                            "id": "https://miniatures.fitz.ms/iiif/FM 3902/annotation/tag/161",
+                            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3902/annotation/tag/161",
                             "type": "Annotation",
                             "motivation": "commenting",
                             "body": {
@@ -159,10 +159,10 @@
                                 "language": "en",
                                 "format": "text/html"
                             },
-                            "target": "https://miniatures.fitz.ms/iiif/FM 3902/canvas/0#xywh=2103,4482,659,712"
+                            "target": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3902/canvas/0#xywh=2103,4482,659,712"
                         },
                         {
-                            "id": "https://miniatures.fitz.ms/iiif/FM 3902/annotation/tag/189",
+                            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3902/annotation/tag/189",
                             "type": "Annotation",
                             "motivation": "commenting",
                             "body": {
@@ -171,10 +171,10 @@
                                 "language": "en",
                                 "format": "text/html"
                             },
-                            "target": "https://miniatures.fitz.ms/iiif/FM 3902/canvas/0#xywh=2702,2162,798,600"
+                            "target": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3902/canvas/0#xywh=2702,2162,798,600"
                         },
                         {
-                            "id": "https://miniatures.fitz.ms/iiif/FM 3902/annotation/tag/191",
+                            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3902/annotation/tag/191",
                             "type": "Annotation",
                             "motivation": "commenting",
                             "body": {
@@ -183,10 +183,10 @@
                                 "language": "en",
                                 "format": "text/html"
                             },
-                            "target": "https://miniatures.fitz.ms/iiif/FM 3902/canvas/0#xywh=1846,2360,771,540"
+                            "target": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3902/canvas/0#xywh=1846,2360,771,540"
                         },
                         {
-                            "id": "https://miniatures.fitz.ms/iiif/FM 3902/annotation/tag/206",
+                            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3902/annotation/tag/206",
                             "type": "Annotation",
                             "motivation": "commenting",
                             "body": {
@@ -195,10 +195,10 @@
                                 "language": "en",
                                 "format": "text/html"
                             },
-                            "target": "https://miniatures.fitz.ms/iiif/FM 3902/canvas/0#xywh=3513,2274,653,593,2274,653,593"
+                            "target": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3902/canvas/0#xywh=3513,2274,653,593,2274,653,593"
                         },
                         {
-                            "id": "https://miniatures.fitz.ms/iiif/FM 3902/annotation/tag/209",
+                            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3902/annotation/tag/209",
                             "type": "Annotation",
                             "motivation": "commenting",
                             "body": {
@@ -207,7 +207,7 @@
                                 "language": "en",
                                 "format": "text/html"
                             },
-                            "target": "https://miniatures.fitz.ms/iiif/FM 3902/canvas/0#xywh=303,3454,237,270"
+                            "target": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM 3902/canvas/0#xywh=303,3454,237,270"
                         }
                     ]
                 }
