add github workflow schedule cron

--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -1,5 +1,10 @@
 name: Generate iiif manifests
-on: workflow_dispatch
+on:
+  push:
+    branches:    
+      - main
+  schedule:
+    - cron:  '2 1 * * *'
 jobs:
   generate:
     runs-on: ubuntu-latest
