deploy: a17c8d784fa77a5ab9e3524ec12a4e02e662efa4

--- a/AGOID.29371/manifest.json
+++ b/AGOID.29371/manifest.json
@@ -13,7 +13,7 @@
     "requiredStatement": {
         "label": {
             "en": [
-                "Attribution"
+                "Collection"
             ]
         },
         "value": {
