--- a/FM 3868/manifest.json
+++ b/FM 3868/manifest.json
@@ -16,7 +16,7 @@
     "requiredStatement": {
         "label": {
             "en": [
-                "Attribution"
+                "Collection"
             ]
         },
         "value": {
