--- a/AGOID.29376/manifest.json
+++ b/AGOID.29376/manifest.json
@@ -13,7 +13,7 @@
     "requiredStatement": {
         "label": {
             "en": [
-                "Attribution"
+                "Collection"
             ]
         },
         "value": {
