--- a/FM 3902/manifest.json
+++ b/FM 3902/manifest.json
@@ -15,7 +15,7 @@
     "requiredStatement": {
         "label": {
             "en": [
-                "Attribution"
+                "Collection"
             ]
         },
         "value": {
