deploy: 3877cbc004086443af852411e2b2781f9991ac81

--- a/AGOID.29376/manifest.json
+++ b/AGOID.29376/manifest.json
@@ -8,7 +8,9 @@
         ]
     },
     "summary": {
-        "en": []
+        "en": [
+            "UV image: loss of colours are evident in the lower part of the miniature, which appears white as the parchment and does not show the orange UV colour typical of lead white, used for the dress. Other retouched areas are evident on the background, at the top and right side.\nThe calcium and lead MA-XRF maps show a possible change in the length of the hair."
+        ]
     },
     "requiredStatement": {
         "label": {
