--- a/AGOID.29378/manifest.json
+++ b/AGOID.29378/manifest.json
@@ -8,7 +8,9 @@
         ]
     },
     "summary": {
-        "en": []
+        "en": [
+            "The miniature is in a good state of conservation, only small retouched areas are evident on the background."
+        ]
     },
     "requiredStatement": {
         "label": {
