--- a/B/MIN/27/manifest.json
+++ b/B/MIN/27/manifest.json
@@ -1,15 +1,15 @@
 {
     "@context": "http://iiif.io/api/presentation/3/context.json",
-    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/AGOID.29371/manifest.json",
+    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/B/MIN/27/manifest.json",
     "type": "Manifest",
     "label": {
         "en": [
-            "Jane Boughton, née Coningsby (b. 1553)"
+            "A lady"
         ]
     },
     "summary": {
         "en": [
-            "The palette identified is compatible with the materials available to Hilliard.\nUV image: the flesh tone appears bright white, due to the fluorescence of the parchment underneath; the orange UV fluorescence colour is associated to the use of lead white. \nThe verso of the playing card was analysed: red areas: vermilion; dark and blue areas: indigo; green area: indigo and likely a yellow dye; yellow areas: yellow dye(?); purple areas: red/ purple dye(?)"
+            "The UV image shows many retouched areas on the ruff, pearls, eyes, and hair: they appear of a bright greenish colour due to the use of zinc white. The orange UV colour is associated to lead white.\nThe IR image shows a retouched area on the background, which appears grey in comparison to the darker background."
         ]
     },
     "requiredStatement": {
@@ -27,28 +27,28 @@
     "rights": "http://creativecommons.org/licenses/by-nc-nd/4.0/",
     "items": [
         {
-            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/AGOID.29371/canvas/0",
+            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/B/MIN/27/canvas/0",
             "type": "Canvas",
-            "height": 3073,
-            "width": 3098,
+            "height": 2542,
+            "width": 2165,
             "items": [
                 {
-                    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/AGOID.29371/page/0/0",
+                    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/B/MIN/27/page/0/0",
                     "type": "AnnotationPage",
                     "items": [
                         {
-                            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/AGOID.29371/painting/0",
+                            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/B/MIN/27/painting/0",
                             "type": "Annotation",
                             "motivation": "painting",
                             "body": {
                                 "type": "Choice",
                                 "items": [
                                     {
-                                        "id": "https://iiif.fitz.ms/iiif/3/9f7d8be9-9611-4161-8e30-68976d8336fc.jpg/full/max/0/default.jpg",
+                                        "id": "https://iiif.fitz.ms/iiif/3/0cda50b6-7fb8-4577-b3c8-9b3fb7f0df50.jpg/full/max/0/default.jpg",
                                         "type": "Image",
                                         "format": "image/jpeg",
-                                        "height": 3073,
-                                        "width": 3098,
+                                        "height": 2542,
+                                        "width": 2165,
                                         "label": {
                                             "en": [
                                                 "Natural Light"
@@ -56,18 +56,18 @@
                                         },
                                         "service": [
                                             {
-                                                "id": "https://iiif.fitz.ms/iiif/3/9f7d8be9-9611-4161-8e30-68976d8336fc.jpg",
+                                                "id": "https://iiif.fitz.ms/iiif/3/0cda50b6-7fb8-4577-b3c8-9b3fb7f0df50.jpg",
                                                 "type": "ImageService3",
                                                 "profile": "level2"
                                             }
                                         ]
                                     },
                                     {
-                                        "id": "https://iiif.fitz.ms/iiif/3/5a176e3c-7c97-4085-948c-875db13ddf82.jpg/full/max/0/default.jpg",
+                                        "id": "https://iiif.fitz.ms/iiif/3/ff441e27-9c56-4d9c-9f07-c853186c095b.jpg/full/max/0/default.jpg",
                                         "type": "Image",
                                         "format": "image/jpeg",
-                                        "height": 3073,
-                                        "width": 3098,
+                                        "height": 2542,
+                                        "width": 2165,
                                         "label": {
                                             "en": [
                                                 "Raking Light"
@@ -75,18 +75,18 @@
                                         },
                                         "service": [
                                             {
-                                                "id": "https://iiif.fitz.ms/iiif/3/5a176e3c-7c97-4085-948c-875db13ddf82.jpg",
+                                                "id": "https://iiif.fitz.ms/iiif/3/ff441e27-9c56-4d9c-9f07-c853186c095b.jpg",
                                                 "type": "ImageService3",
                                                 "profile": "level2"
                                             }
                                         ]
                                     },
                                     {
-                                        "id": "https://iiif.fitz.ms/iiif/3/311de01c-4e7a-411f-9b02-fec82a7d9de5.jpg/full/max/0/default.jpg",
+                                        "id": "https://iiif.fitz.ms/iiif/3/619d8fba-28e1-4a16-9210-ea6497a2ffd6.jpg/full/max/0/default.jpg",
                                         "type": "Image",
                                         "format": "image/jpeg",
-                                        "height": 3073,
-                                        "width": 3098,
+                                        "height": 2542,
+                                        "width": 2165,
                                         "label": {
                                             "en": [
                                                 "Infrared"
@@ -94,18 +94,18 @@
                                         },
                                         "service": [
                                             {
-                                                "id": "https://iiif.fitz.ms/iiif/3/311de01c-4e7a-411f-9b02-fec82a7d9de5.jpg",
+                                                "id": "https://iiif.fitz.ms/iiif/3/619d8fba-28e1-4a16-9210-ea6497a2ffd6.jpg",
                                                 "type": "ImageService3",
                                                 "profile": "level2"
                                             }
                                         ]
                                     },
                                     {
-                                        "id": "https://iiif.fitz.ms/iiif/3/67cabc77-0787-48d5-a91d-50bda3f40ab1.jpg/full/max/0/default.jpg",
+                                        "id": "https://iiif.fitz.ms/iiif/3/d3de9e2f-974d-483a-87ec-0c4bccaeb083.jpg/full/max/0/default.jpg",
                                         "type": "Image",
                                         "format": "image/jpeg",
-                                        "height": 3073,
-                                        "width": 3098,
+                                        "height": 2542,
+                                        "width": 2165,
                                         "label": {
                                             "en": [
                                                 "Ultraviolet"
@@ -113,7 +113,26 @@
                                         },
                                         "service": [
                                             {
-                                                "id": "https://iiif.fitz.ms/iiif/3/67cabc77-0787-48d5-a91d-50bda3f40ab1.jpg",
+                                                "id": "https://iiif.fitz.ms/iiif/3/d3de9e2f-974d-483a-87ec-0c4bccaeb083.jpg",
+                                                "type": "ImageService3",
+                                                "profile": "level2"
+                                            }
+                                        ]
+                                    },
+                                    {
+                                        "id": "https://iiif.fitz.ms/iiif/3/fbc1c062-3301-4fd4-b5f4-6cbfb4793131.jpg/full/max/0/default.jpg",
+                                        "type": "Image",
+                                        "format": "image/jpeg",
+                                        "height": 2542,
+                                        "width": 2136,
+                                        "label": {
+                                            "en": [
+                                                "X-ray"
+                                            ]
+                                        },
+                                        "service": [
+                                            {
+                                                "id": "https://iiif.fitz.ms/iiif/3/fbc1c062-3301-4fd4-b5f4-6cbfb4793131.jpg",
                                                 "type": "ImageService3",
                                                 "profile": "level2"
                                             }
@@ -121,7 +140,7 @@
                                     }
                                 ]
                             },
-                            "target": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/AGOID.29371/canvas/0"
+                            "target": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/B/MIN/27/canvas/0"
                         }
                     ]
                 }
@@ -129,12 +148,12 @@
             "physicalDimensions": {
                 "type": "PhysicalDimension",
                 "profile": "http://iiif.io/api/annex/extensions/physdim",
-                "physicalScale": 0.0146,
+                "physicalScale": 0,
                 "physicalUnits": "mm"
             },
             "annotations": [
                 {
-                    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/AGOID.29371/page/0/0",
+                    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/B/MIN/27/page/0/0",
                     "type": "AnnotationPage",
                     "items": []
                 }
